--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "next": "14.2.12",
     "react": "^18.3.1",
     "react-dom": "^18",
-    "react-router-dom": "^6.26.2"
+    "react-loaders": "^3.0.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
