--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loaders": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-spring": "^9.7.4",
     "redux": "^5.0.1"
   },
   "devDependencies": {
