--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.21.0",
+    "express-validator": "^7.2.0",
+    "mariadb": "^3.3.2",
     "next": "14.2.12",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-loaders": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-spring": "^9.7.4",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "eslint": "^8",
